# Reyveld

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build.yaml  example-sere-kit.xml  pubspec.yaml
lib/: cli.dart  (+19 more)
src/: CMakeLists.txt
src/squirrel3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  squirrel.sln
src/squirrel3/sq/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sq.vcxproj  sq_static.vcxproj  sq_static.vcxproj.filters
src/squirrel3/sq/sq.dir/Debug/: sq.exe.recipe  sq.ilk
src/squirrel3/sq/sq_static.dir/Debug/: sq_static.exe.recipe  sq_static.ilk
src/squirrel3/sqstdlib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sqstdlib.vcxproj  sqstdlib.vcxproj.filters  sqstdlib_static.vcxproj
src/squirrel3/sqstdlib/Debug/: sqstdlib.exp  sqstdlib.lib  sqstdlib_static.lib
src/squirrel3/sqstdlib/sqstdlib.dir/Debug/: exports.def  objects.txt  sqstdlib.dll.recipe  sqstdlib.ilk
src/squirrel3/sqstdlib/sqstdlib.dir/MinSizeRel/: objects.txt
src/squirrel3/sqstdlib/sqstdlib.dir/RelWithDebInfo/: objects.txt
src/squirrel3/sqstdlib/sqstdlib.dir/Release/: objects.txt
src/squirrel3/squirrel/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  squirrel.vcxproj  squirrel.vcxproj.filters  squirrel_static.vcxproj
src/squirrel3/squirrel/Debug/: squirrel.exp  squirrel.lib  squirrel_static.lib
src/squirrel3/squirrel/squirrel.dir/Debug/: exports.def  objects.txt  squirrel.dll.recipe  squirrel.ilk
(+223 files in other folders)
